Enable delivery scope in 1C reconciliation REST
